--- a/index.html
+++ b/index.html
@@ -1,19 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+        integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/responsive.css">
 
     <title>Varsatali uI</title>
 </head>
+
 <body class="inter-font">
-    <header>
-        <nav>
-            
+    <header class="header">
+        <nav class="nav-container">
+            <div class="div-nav">
+                <div class="nav-left">
+                    <h1>Fitness</h1>
+                </div>
+                <div class="nav-right">
+                    <a style="background-color: rgb(230, 83, 60); padding: 10px 16px; border-radius: 20px;" href="">Home</a>
+                    <a href="">Services</a>
+                    <a href="">Contact</a>
+                    <a href="">About</a>
+                </div>
+            </div>
         </nav>
+        <!-- banner section -->
+        <section>
+
+        </section>
     </header>
     <main>
 
@@ -21,6 +39,7 @@
     <footer>
 
     </footer>
-    
+
 </body>
+
 </html>
