--- a/index.html
+++ b/index.html
@@ -21,16 +21,68 @@
                     <h1>Fitness</h1>
                 </div>
                 <div class="nav-right">
-                    <a style="background-color: rgb(230, 83, 60); padding: 10px 16px; border-radius: 20px;" href="">Home</a>
+                    <a style="background-color: rgb(230, 83, 60); padding: 10px 16px; border-radius: 20px;"
+                        href="">Home</a>
                     <a href="">Services</a>
                     <a href="">Contact</a>
                     <a href="">About</a>
                 </div>
+                <div class="icons-bar">
+                    <i class="fa-solid fa-bars"></i>
+                </div>
             </div>
         </nav>
         <!-- banner section -->
-        <section>
+        <section class="banner ">
+            <div class="banner-container">
+                <div class="banner-child1">
+                    <h1>Get body in <br> <span>hope</span> & stay <br> healthy</h1>
+                    <p>A huge selection of health and fitness content, healthy recipes <br> and transformation stories
+                        to help you get fit and stay fit!</p>
+                    <button id="banner-btn1" class=" btn">Join Club Now!</button>
+                    <button id="banner-btn2" class="btn">Download App</button>
+                </div>
+                <div class="banner-child2">
+                    <div style="position: relative;">
+                        <img src="/images/Images 2.png" alt="">
+                        <!-- button card 1 -->
+                        <button class="card-btn-1">
+                            <div class="card-btn-1-container">
+                                <div class="card-circle">
+                                </div>
+                                <div style="text-align: start;">
+                                    <h1 id="card-1-h1">350+</h1>
+                                    <p id="card-1-p">Video Tutorial</p>
+                                </div>
+                            </div>
+                        </button>
+                        <!-- button card2 -->
+                        <button class="card-btn-2">
+                            <div class="card-btn-2-container">
+                               
+                                    <h1 id="card-2-h1">500+</h1>
+                                    <p id="card-2-p">Free Workout Videos</p>
+                                
+                            </div>
+                        </button>
 
+                        <!-- <button style="position: absolute;  background-color: rgba(48, 48, 48, 0.54); right: -15%; top: 25%; border: none; border-radius: 12px;">
+                            <div
+                                style=" display: flex; justify-content: space-between; align-items: center; padding: 20px;">
+                                <div
+                                    style="width: 50px; height: 50px; background-color: rgb(230, 83, 60); border-radius: 50%; margin-right: 16px;">
+                                </div>
+                                <div >
+                                    <h1 style="color: white; font-size: 24px; font-weight: 900;">350+</h1>
+                                    <p style="color: white; font-weight: 400; font-size: 16px;">Video Tutorial</p>
+                                </div>
+                            </div>
+                        </button> -->
+
+                    </div>
+
+                </div>
+            </div>
         </section>
     </header>
     <main>
