habit section complete

--- a/index.html
+++ b/index.html
@@ -65,20 +65,6 @@
                                 
                             </div>
                         </button>
-
-                        <!-- <button style="position: absolute;  background-color: rgba(48, 48, 48, 0.54); right: -15%; top: 25%; border: none; border-radius: 12px;">
-                            <div
-                                style=" display: flex; justify-content: space-between; align-items: center; padding: 20px;">
-                                <div
-                                    style="width: 50px; height: 50px; background-color: rgb(230, 83, 60); border-radius: 50%; margin-right: 16px;">
-                                </div>
-                                <div >
-                                    <h1 style="color: white; font-size: 24px; font-weight: 900;">350+</h1>
-                                    <p style="color: white; font-weight: 400; font-size: 16px;">Video Tutorial</p>
-                                </div>
-                            </div>
-                        </button> -->
-
                     </div>
 
                 </div>
@@ -86,7 +72,38 @@
         </section>
     </header>
     <main>
-
+        <!-- habit section start -->
+        <section class="habit-section">
+            <div class="habit-container">
+                <h1>Change Your Habits</h1>
+                <p>We believe fitness should be accessible to everyone, everywhere, regardless of income <br> or access to a gym.</p>
+                <!-- habit card -->
+                <div class="habit-card-container">
+                    <div class="habit-card">
+                        <div class="habit-img"><img src="/images/image 3.png" alt=""></div>
+                        <h1>Movement</h1>
+                        <p>We believe fitness should be accessible to everyone</p>
+                    </div>
+                    <div class="habit-card">
+                        <div class="habit-img"><img src="/images/image 2.png" alt=""></div>
+                        <h1>Time</h1>
+                        <p>We believe fitness should be accessible to everyone</p>
+                    </div>
+                    <div class="habit-card">
+                        <div class="habit-img"><img src="/images/image 4.png" alt=""></div>
+                        <h1>Practice</h1>
+                        <p>We believe fitness should be accessible to everyone</p>
+                    </div>
+                    <div class="habit-card">
+                        <div class="habit-img"><img src="/images/image 5.png" alt=""></div>
+                        <h1>Weight Loss</h1>
+                        <p>We believe fitness should be accessible to everyone</p>
+                    </div>
+                    
+                </div>
+            </div>
+        </section>
+        <!-- habit section end -->
     </main>
     <footer>
 
