images path update

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </div>
                 <div class="banner-child2">
                     <div style="position: relative;">
-                        <img src="/images/Images 2.png" alt="">
+                        <img src="./images/Images 2.png" alt="">
                         <!-- button card 1 -->
                         <button class="card-btn-1">
                             <div class="card-btn-1-container">
@@ -80,22 +80,22 @@
                 <!-- habit card -->
                 <div class="habit-card-container">
                     <div class="habit-card">
-                        <div class="habit-img"><img src="/images/image 3.png" alt=""></div>
+                        <div class="habit-img"><img src="./images/image 3.png" alt=""></div>
                         <h1>Movement</h1>
                         <p>We believe fitness should be accessible to everyone</p>
                     </div>
                     <div class="habit-card">
-                        <div class="habit-img"><img src="/images/image 2.png" alt=""></div>
+                        <div class="habit-img"><img src="./images/image 2.png" alt=""></div>
                         <h1>Time</h1>
                         <p>We believe fitness should be accessible to everyone</p>
                     </div>
                     <div class="habit-card">
-                        <div class="habit-img"><img src="/images/image 4.png" alt=""></div>
+                        <div class="habit-img"><img src="./images/image 4.png" alt=""></div>
                         <h1>Practice</h1>
                         <p>We believe fitness should be accessible to everyone</p>
                     </div>
                     <div class="habit-card">
-                        <div class="habit-img"><img src="/images/image 5.png" alt=""></div>
+                        <div class="habit-img"><img src="./images/image 5.png" alt=""></div>
                         <h1>Weight Loss</h1>
                         <p>We believe fitness should be accessible to everyone</p>
                     </div>
