team and footer section done

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+        integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/responsive.css">
 
@@ -164,7 +167,7 @@
                             <h1>Calculate your BMI</h1>
                             <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or
                                 access to a gym. </p>
-                            <div class="form-container">
+                            <div class="form-container" style="margin-top: 30px;">
                                 <div class="row-1">
                                     <div><input placeholder="Height/ cm" style="width: 100%;" type="text"></div>
                                     <div><input placeholder="Weight / kg" style="width: 100%;" type="text"></div>
@@ -173,7 +176,10 @@
                                     <div><input placeholder="Age" style="width: 100%;" type="text"></div>
                                     <div><input placeholder="Sex" style="width: 100%;" type="text"></div>
                                 </div>
-                                <div class="row-3"><input placeholder="Select an activity factor" style="width: 100%;" type="text"></div>
+                                <div class="row-3"><input placeholder="Select an activity factor" style="width: 100%;"
+                                        type="text">
+
+                                </div>
 
                             </div>
                             <button style="background-color: rgb(230, 83, 60); margin-top: 10px;"
@@ -187,9 +193,104 @@
             </div>
         </section>
         <!-- BMI calculator end -->
-    </main>
-    <footer>
 
+        <!-- team section start -->
+        <section class="team-section">
+            <div class="team-container">
+                <h1 style="color: white; text-align: center;">Meet Our Team</h1>
+                <p style="color: rgba(255, 255, 255, 0.5); margin-bottom: 50px;">We believe fitness should be accessible to everyone, everywhere, regardless of income or <br> access to a
+                    gym.</p>
+                <div class="team-img-container">
+                    <div class="team-img">
+                        <div class="t-img">
+                            <img src="./images/trainer1.png" alt="">
+                        </div>
+                        <div class="team-text">
+                            <h2>Jerome Bell</h2>
+                            <p>Trainer</p>
+                        </div>
+                    </div>
+                    <div class="team-img">
+                        <div class="t-img">
+                            <img src="./images/trainer2.png" alt="">
+                        </div>
+                        <div class="team-text">
+                            <h2>Cameron williamson</h2>
+                            <p>Trainer</p>
+                        </div>
+                    </div>
+                    <div class="team-img">
+                        <div class="t-img">
+                            <img src="./images/trainer3.png" alt="">
+                        </div>
+                        <div id="t-text" class="team-text">
+                            <h2>Darrell Steward</h2>
+                            <p>Trainer</p>
+                        </div>
+                    </div>
+                    <div class="team-img">
+                        <div class="t-img">
+                            <img src="./images/trainer4.png" alt="">
+                        </div>
+                        <div class="team-text">
+                            <h2>Dianne Russell</h2>
+                            <p>Trainer</p>
+                        </div>
+                    </div>
+                    <div class="team-img">
+                        <div class="t-img">
+                            <img src="./images/trainer5.png" alt="">
+                        </div>
+                        <div class="team-text">
+                            <h2>Cody Fisher</h2>
+                            <p>Trainer</p>
+                        </div>
+                    </div>
+                    <div class="team-img">
+                        <div class="t-img">
+                            <img src="./images/trainer6.png" alt="">
+                        </div>
+                        <div class="team-text">
+                            <h2>Theresa Wabb</h2>
+                            <p>Trainer</p>
+                        </div>
+                    </div>
+
+
+                </div>
+            </div>
+        </section>
+        <!-- team section end -->
+    </main>
+    <footer class="footer-section">
+        <div class="footer-container">
+            <div class="sub-container">
+                <div class="f-child1">
+                    <h1>Fitness</h1>
+                    <p style="text-align: start;   color: rgba(255, 255, 255, 0.5);">We believe fitness should be accessible to everyone, everywhere, regardless of income or access
+                        to a gym. With hundreds of professional workouts.</p>
+                </div>
+                <div class="f-child2">
+                    <h1>Get Started</h1>
+                    <ul>
+                        <li>Service</li>
+                        <li>Contact us</li>
+                        <li>Affiliate Program</li>
+                        <li>About us</li>
+                    </ul>
+                </div>
+                <div class="f-child3">
+                    <h1>Get Started</h1>
+                    <ul>
+                        <li>Fitness</li>
+                        <li>Platform</li>
+                        <li>Workout Library </li>
+                        <li>App design</li>
+                    </ul>
+                </div>
+            </div>
+            <p style="color: rgba(255, 255, 255, 0.5); border-top: 1px solid rgba(255, 255, 255, 0.5); margin-top: 30px; padding: 20px 0;">All right reserved @Fitness 2024</p>
+        </div>
     </footer>
 
 </body>
