--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                         <h1>Our Tutorial</h1>
                     </div>
                     <div class="video">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/wIynl3at0Rs?si=tLRR9K3lgpzMu6Kr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <iframe class="iframe" src="https://www.youtube.com/embed/wIynl3at0Rs?si=tLRR9K3lgpzMu6Kr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
